--- a/index.html
+++ b/index.html
@@ -8,6 +8,84 @@
     <script src="./js/js.js" charset="UTF-8"></script>
 </head>
 <body>
-    
+    <div> <!-- круги все -->
+        <div class="green_fon"><!-- круги зеленые -->
+            <img class="krug_green" src="./img/green_krug.svg">
+            <img class="krug_green2" src="./img/green_krug.svg">
+        </div>
+        <div class="gradient_fon"><!-- круги градиенты -->
+            <div class="gradient_krug1"></div>
+            <div class="gradient_krug2"></div>
+            <div class="gradient_krug3"></div>
+            <div class="gradient_krug4"></div>
+            <div class="gradient_krug5"></div>
+            <div class="gradient_krug6"></div>
+            <div class="gradient_krug7"></div>
+            <div class="gradient_krug8"></div>
+            <div class="gradient_krug9"></div>
+        </div>
+    </div>
+    <div> <!-- цветы -->
+        <div class="flower1">
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+        </div>
+        <div class="flower2">
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+        </div>
+        <div class="flower3">
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+        </div>
+        <div class="flower4">
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+        </div>
+        <div class="flower5">
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+            <div class="sector">
+              <div class="lepestok"></div>
+              <div class="lepestok"></div>
+            </div>
+        </div>
+    </div>
+    <div><!-- название -->
+        <!-- <marquee>excursion excursion excursion excursion excursion excursion excursion excursion excursion</marquee>
+        <img class="fofairy" src="./img/Group 113.svg">  -->
+    </div>
+    <!-- <p class="tekst_vverh">tour of the forest where fairies live in our world</p> -->
+    <div><!-- подвал -->
+        <p class="hse..."></p>
+        <p class="ya"></p>
+        <p class="group"></p>
+    </div>
 </body>
 </html>
