--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <div> <!-- круги все -->
         <div class="green_fon"><!-- круги зеленые -->
+            <img class="krug_green3" src="./img/green_krug.svg">
             <img class="krug_green" src="./img/green_krug.svg">
             <img class="krug_green2" src="./img/green_krug.svg">
+            <img class="krug_green4" src="./img/green_krug.svg">
+            <img class="krug_green5" src="./img/green_krug.svg">
+            <img class="krug_green6" src="./img/green_krug.svg">
+            <img class="krug_green7" src="./img/green_krug.svg">
+            <img class="krug_green8" src="./img/green_krug.svg">
+            <img class="krug_green9" src="./img/green_krug.svg">
         </div>
         <div class="gradient_fon"><!-- круги градиенты -->
             <div class="gradient_krug1"></div>
@@ -28,64 +35,64 @@
     <div> <!-- цветы -->
         <div class="flower1">
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok1"></div>
+              <div class="lepestok1"></div>
             </div>
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok1"></div>
+              <div class="lepestok1"></div>
             </div>
         </div>
         <div class="flower2">
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok2"></div>
+              <div class="lepestok2"></div>
             </div>
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok2"></div>
+              <div class="lepestok2"></div>
             </div>
         </div>
         <div class="flower3">
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok3"></div>
+              <div class="lepestok3"></div>
             </div>
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok3"></div>
+              <div class="lepestok3"></div>
             </div>
         </div>
         <div class="flower4">
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok4"></div>
+              <div class="lepestok4"></div>
             </div>
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok4"></div>
+              <div class="lepestok4"></div>
             </div>
         </div>
         <div class="flower5">
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok5"></div>
+              <div class="lepestok5"></div>
             </div>
             <div class="sector">
-              <div class="lepestok"></div>
-              <div class="lepestok"></div>
+              <div class="lepestok5"></div>
+              <div class="lepestok5"></div>
             </div>
         </div>
     </div>
+    <img class="tekst_vverh" src="./img/tour of the forest...svg">
     <div><!-- название -->
-        <!-- <marquee>excursion excursion excursion excursion excursion excursion excursion excursion excursion</marquee>
-        <img class="fofairy" src="./img/Group 113.svg">  -->
+        <marquee class="excursion">excursion excursion excursion excursion excursion excursion excursion excursion excursion</marquee>
+        <img class="fofairy" src="./img/название.svg"> 
     </div>
-    <!-- <p class="tekst_vverh">tour of the forest where fairies live in our world</p> -->
-    <div><!-- подвал -->
-        <p class="hse..."></p>
-        <p class="ya"></p>
-        <p class="group"></p>
+    <img class="end" src="./img/подвал.svg"> <!-- подвал -->
+    <div>
+      <img class="igra1" src="./img/igra1.svg">
+
     </div>
 </body>
 </html>
