--- a/index.html
+++ b/index.html
@@ -86,13 +86,17 @@
     </div>
     <img class="tekst_vverh" src="./img/tour of the forest...svg">
     <div><!-- название -->
-        <marquee class="excursion">excursion excursion excursion excursion excursion excursion excursion excursion excursion</marquee>
+        <marquee class="excursion">excursion excursion excursion excursion excursion excursion excursion excursion excursion excursion excursion excursion</marquee>
         <img class="fofairy" src="./img/название.svg"> 
     </div>
     <img class="end" src="./img/подвал.svg"> <!-- подвал -->
-    <div>
+    <div><!-- блок 1 игра 1  -->
       <img class="igra1" src="./img/igra1.svg">
-
+      
+    </div>
+    <div><!-- блок 2  -->
+      <img class="bloc2" src="./img/bloc_pay.svg">
+      <img class="knopka" src="./img/кнопка.svg" href="https://portfolio.hse.ru/?filter=1_1_N_10_N_2024_N_1_N_N_N"  target="_blank">
     </div>
 </body>
 </html>
