--- a/index.html
+++ b/index.html
@@ -92,11 +92,49 @@
     <img class="end" src="./img/подвал.svg"> <!-- подвал -->
     <div><!-- блок 1 игра 1  -->
       <img class="igra1" src="./img/igra1.svg">
-      
+      <div>
+      <img class="собери1" src="./img/кадратдляигра1.svg">
+      </div>
+       <div class="крыло1">
+        <img class="krilo1" src="./img/вар1.svg" alt="">
+      </div>
+      <div class="крыло2">
+        <img class="krilo2" src="./img/вар5.svg" alt="">
+      </div>
+      <div class="крыло3">
+       <img class="krilo3" src="./img/вар7.svg" alt="">
+      </div>
+      <div class="крыло4">
+        <img class="krilo4" src="./img/вар11.svg" alt="">
+      </div>
     </div>
+    <img class="окунись" src="./img/окунись.svg">
     <div><!-- блок 2  -->
       <img class="bloc2" src="./img/bloc_pay.svg">
-      <img class="knopka" src="./img/кнопка.svg" href="https://portfolio.hse.ru/?filter=1_1_N_10_N_2024_N_1_N_N_N"  target="_blank">
+      <a  href="https://portfolio.hse.ru/?filter=1_1_N_10_N_2024_N_1_N_N_N"  target="_blank"> <img class="knopka" src="./img/кнопка.svg"></a>
+
+    </div>
+    <div><!-- блок 3  -->
+      <img class="igra2" src="./img/получи.svg">
+      <img id="predictButton" class="knopka2" src="./img/жми.svg">
+      <!-- Попап -->
+      <div class="overlay" id="overlay"></div>
+      <div class="popup" id="popup">
+      <p id="predictionText"></p>
+      <button class="close" id="closeButton">X</button>
+      </div>
+    </div>
+    <div><!-- блок 4  -->
+      <img class="blok4" src="./img/блок3.svg">
+    </div>
+    <div><!-- блок 5  -->
+      <img class="blok5" src="./img/блок4.svg">
+    </div>
+    <div><!-- блок 6  -->
+      <img class="bloc6" src="./img/поймай.svg">
+    </div>
+    <div><!-- все звезды -->
+      <img class="star" src="./img/звезда.svg">
     </div>
 </body>
 </html>
