--- a/index.html
+++ b/index.html
@@ -136,5 +136,17 @@
     <div><!-- все звезды -->
       <img class="star" src="./img/звезда.svg">
     </div>
+    <div id="butterflies"> <!-- бабочки -->
+     <img src="./img/бабочка_розовая.svg" class="butterfly  b1">
+     <img src="./img/бабочка_розовая.svg" class="butterfly   b2">
+     <!-- <img src="./img/бабочка_розовая.svg" class="butterfly   b3">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b4">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b5">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b6">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b7">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b8">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b9">
+     <img src="./img/бабочка_зеленая.svg" class="butterfly   b10"> -->
+    </div>
 </body>
 </html>
