--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <img class="star" src="./img/звезда.svg">
     </div>
     <div><!-- блок 6  -->
-      <img class="bloc6" src="./img/поймай.svg">
+      <img class="bloc6" src="./img/poymay.svg">
     </div>
     <div id="butterflies"> <!-- бабочки -->
      <img src="./img/бабочка_розовая.svg" class="butterfly  b1">
