--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img class="окунись" src="./img/окунись.svg">
     <div><!-- блок 2  -->
       <img class="bloc2" src="./img/bloc_pay.svg">
-      <a  href="https://portfolio.hse.ru/?filter=1_1_N_10_N_2024_N_1_N_N_N"  target="_blank"> <img class="knopka" src="./img/кнопка.svg"></a>
+      <a  href="https://portfolio.hse.ru/Project/245931"  target="_blank"> <img class="knopka" src="./img/кнопка.svg"></a>
 
     </div>
     <div><!-- блок 3  -->
@@ -132,6 +132,8 @@
     </div>
     <div><!-- все звезды -->
       <img class="star" src="./img/звезда.svg">
+      <img class="pinkstar" src="./img/pinkstar.svg">
+      <img class="star_ye" src="./img/star_ye.svg">
     </div>
     <div><!-- блок 6  -->
       <img class="bloc6" src="./img/poymay.svg">
@@ -139,14 +141,13 @@
     <div id="butterflies"> <!-- бабочки -->
      <img src="./img/бабочка_розовая.svg" class="butterfly  b1">
      <img src="./img/бабочка_розовая.svg" class="butterfly   b2">
-     <!-- <img src="./img/бабочка_розовая.svg" class="butterfly   b3">
+     <img src="./img/бабочка_розовая.svg" class="butterfly   b3">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b4">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b5">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b6">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b7">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b8">
      <img src="./img/бабочка_зеленая.svg" class="butterfly   b9">
-     <img src="./img/бабочка_зеленая.svg" class="butterfly   b10"> -->
     </div>
 </body>
 </html>
