--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
       <img class="star" src="./img/звезда.svg">
       <img class="pinkstar" src="./img/pinkstar.svg">
       <img class="star_ye" src="./img/star_ye.svg">
+      <img class="шарики1" src="./img/шарики1.svg">
+      <img class="шарики2" src="./img/шарики2.svg">
+      <img class="шарики3" src="./img/шарики3.svg">
+      <img class="шарики4" src="./img/шарики4.svg">
+      <img class="шарики5" src="./img/шарики5.svg">
+
+      <img class="st1" src="./img/Star1.svg">
+      <img class="st2" src="./img/Star2.svg">
+      <img class="st3" src="./img/Star3.svg">
+      <img class="st4" src="./img/Star4.svg">
     </div>
     <div><!-- блок 6  -->
       <img class="bloc6" src="./img/poymay.svg">
