--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FoFairy Excursion</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/js.js" charset="UTF-8"></script>
+    <link rel="icon" href="./img/icons.svg" type="image/x-icon">
 </head>
 <body>
     <div> <!-- круги все -->
